skin/frontend/gs-default/default/css/adjnav.css
/**
 * Product:     Layered Navigation Pro - 07/06/12
 * Package:     AdjustWare_Nav_2.4.2_0.1.4_8_300402
 * Purchase ID: n/a
 * Generated:   2012-06-12 14:40:26
 * File path:   skin/frontend/default/default/css/adjnav.css
 * Copyright:   (c) 2012 AITOC, Inc.
 */
div.narrow-by dd a {padding:0px 5px 0px 0px; display:block; float: left;} 

/*categories*/
div.narrow-by span.adj-nav-category-current {font-weight: bold; padding-left: 5px;} 
div.narrow-by a.adj-nav-pad2 {padding-left:5px}
div.narrow-by a.adj-nav-pad3 {padding-left:10px}

/*price ranges*/
div.narrow-by a.adj-nav-price {}
div.narrow-by a.adj-nav-price-selected {font-weight: bold}

/*attributes*/
div.narrow-by a.adj-nav-attribute { padding-left:15px; background:transparent url(../images/adj-nav-checkbox.gif) no-repeat scroll -70px 3px; color: #606163;}
div.narrow-by a.adj-nav-attribute-selected {padding-left:15px; background-position: -50px -17px; }
div.narrow-by a.adj-nav-icon {padding:0px 0px 5px 0px;}
div.narrow-by a.adj-nav-icon-selected {opacity:0.5}
img.adj-icon{padding-right:5px}

div.narrow-by a.adj-nav-disabled {color:gray; cursor:wait}
div.narrow-by input.adj-nav-disabled {background-color:gray; border:1px solid gray; cursor:wait}

div.narrow-by a.adj-nav-clear {float: right; cursor:pointer;} 

div.adj-nav-slider { position:relative; z-index:9; height:18px; margin:0 auto 5px auto; background:url(../images/slider_bg.gif) no-repeat 50% 50%; cursor:pointer; }
div.adj-nav-slider div.handle { top:3px; width:8px; height:14px; background: transparent url(../images/adj-nav-slider-hadle.png) no-repeat; cursor:move; position: absolute; }

#adj-nav-container, div.adj-nav {position:relative}

.adj-nav-progress{
    width:100%;
    height:100%;
    background-color:#FFFFFF;
    z-index:500;
    opacity: 0.6;
    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=60);
    position:absolute;
    top:0;
    left:0;
}

.adj-nav-progress img{
	left:45%;
	top:100px;
	display:block;
	position:absolute;
}

.layered-nav div.adj-clear-all {
    margin:0;
    border:1px solid #b9ccdd;
    border-left:0;
    border-right:0;
    padding:3px 10px;
    background:url(../images/layered_nav_narrowed_category_heading.gif) #d5e8ff;
    color:#1f5070;
    font-weight:bold;
    font-size:1em;
    text-align:center;
} 

.narrow-by dt{
cursor:pointer;
}
.narrow-by dt.adj-nav-dt-selected{
background:url(../images/narrow_by_set2.png) no-repeat 9px .9em; 
}

div.narrow-by dd li{overflow:hidden;}
.adjnav-attr-more-dd {min-height: 12px;}

div.adjnav-page-autoload-progress {
    text-align: center;
    padding: 5px 0;
} 

div.adjnav-page-autoload-progress img {
    margin: 0 2px;
}

